after adding my picture

--- a/helloworld/index.html
+++ b/helloworld/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello world mama</title>
 </head>
+<style>
+   img{width: 200px;
+    height: 300px;}
+</style>
 <body>
-    <h1> this is the first html k</h1>
-    <p> this is  the end </p>
+   
+    <div>
+        <h1> this is the first html k</h1>
+        <p> this is  the end </p>
+        <img src="filmon.jpeg" alt="">
+        <p> welcome to this world</p>
+    </div>
 </body>
 </html>
