--- a/helloworld/index.html
+++ b/helloworld/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello world mama</title>
+    <title>filmon araya</title>
 </head>
 <style>
    img{width: 200px;
@@ -12,11 +12,14 @@
 </style>
 <body>
    
-    <div>
-        <h1> this is the first html k</h1>
-        <p> this is  the end </p>
-        <img src="filmon.jpeg" alt="">
-        <p> welcome to this world</p>
-    </div>
+    <div><img src="filmon.jpeg" alt="">
+        <h1> Filmon Araya</h1>
+       <ol>W1D1 - this homepage</ol>
+       <ul>W1D2 - About Me</ul> 
+       <ul>W1D3 - Recipe</ul>
+       <ul>W1D4 - Movie review</ul>
+       <ul>W1D5 - MP3 Library</ul>
+      
+
 </body>
 </html>
