--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -14,12 +14,27 @@
    
     <div><img src="/helloworld/filmon.jpeg" alt="">
         <h1> Filmon Araya</h1>
-       <ol>W1D1 - this homepage</ol>
-       <ul>W1D2 - About Me</ul> 
-       <ul>W1D3 - Recipe</ul>
-       <ul>W1D4 - Movie review</ul>
-       <ul>W1D5 - MP3 Library</ul>
       
+       <ul>
+        <li>W1D1 - this homepage</li>
+        <li>W1D2 - About Me</li> 
+        <li>W1D3 - Recipe</li>
+        <li>W1D4 - Movie review</li>
+        <li>W1D5 - MP3 Library</li>
+       </ul>
+      
+       <div id="validation">
+        <p>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!" />
+            </a>
 
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+                    alt="Valid CSS!" />
+            </a>
+        </p>
+    </div>
 </body>
 </html>
